--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
     "json-server": "^0.17.2",
     "moment": "^2.29.4",
     "prettier": "^2.8.4",
@@ -19,7 +20,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-server": "json-server --watch ./db/db.json --port 3005"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +43,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@types/bcryptjs": "^2.4.2",
     "tailwindcss": "^3.2.7"
   }
 }
